--- a/app/src/App.css
+++ b/app/src/App.css
@@ -258,6 +258,8 @@ body {
   border: 1px solid #e8e3d8;
   display: flex;
   flex-direction: column;
+  text-decoration: none;
+  color: inherit;
 }
 
 .widget:hover {
